2017-12-20 | Antonio-testing-antonioViews | Fixed problem with platform box too large in platform.ctp

--- a/webroot/css/compare_styles.css
+++ b/webroot/css/compare_styles.css
@@ -1605,6 +1605,12 @@ hr.nomargin {
     }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 990px) {
+    #winvestifyActivePlatforms, #winvestifyFuturePlatforms, .platformActive {
+        margin-left: 0;
+    }
+}
+
 
 
 /*MOBILE SWAP MEDIA QUERY >320*/
